# AdminAssistant

./: README.md
AdminAssistant/: CMakeLists.txt  Doxyfile  README.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  requirements.txt  tests.cpp
AdminAssistant/doc/html/: _admin_assistant_8dir_2_admin_assistant__autogen_2mocs__compilation_8cpp_8obj_8d.html  _admin_assistant_8dir_2tests_8cpp_8obj_8d.html  _admin_assistant__autogen_2include_2tests_8moc_8d.html  _admin_assistant__autogen_2moc__predefs_8h.html  _admin_assistant__autogen_2moc__predefs_8h.js  _admin_assistant__autogen_2moc__predefs_8h_source.html  _admin_assistant__autogen_2mocs__compilation_8cpp.html  _app_tests_8dir_2_app_tests__autogen_2mocs__compilation_8cpp_8obj_8d.html  _app_tests_8dir_2tests_8cpp_8obj_8d.html  _app_tests__autogen_2include_2tests_8moc_8d.html  _app_tests__autogen_2moc__predefs_8h.html  _app_tests__autogen_2moc__predefs_8h.js  _app_tests__autogen_2moc__predefs_8h_source.html  _app_tests__autogen_2mocs__compilation_8cpp.html  _app_tests__autogen_2mocs__compilation_8cpp.js  _c_make_c_x_x_compiler_id_8cpp.html  annotated.html  annotated_dup.js  class_app_tests-members.html  class_app_tests.html  class_app_tests.js  class_main_window-members.html  class_main_window.html  class_main_window.js  class_ui_1_1_main_window-members.html  class_ui_1_1_main_window.html  class_ui___main_window-members.html  class_ui___main_window.html  class_ui___main_window.js  classes.html  dir_102d73a64b25b7bcf4e1e01ade9d717c.html  dir_102d73a64b25b7bcf4e1e01ade9d717c.js  dir_2431ece67329f8cc04cb6a602b27a377.html  (+89 more)
(+38 files in other folders)
